--- a/style.css
+++ b/style.css
@@ -37,3 +37,41 @@ span {
 .link_btn:hover {
   border: 1px solid rgb(126, 117, 117);
 }
+#sec2_h1 {
+  font-size: 28px;
+  text-align: center;
+}
+.container_items {
+  width: 33%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px gray;
+}
+.container_items img {
+  width: 30%;
+}
+.vision {
+  background-color: rgba(255, 89, 89, 0.198);
+}
+.mission {
+  background-color: #4f9da63b;
+}
+.goals {
+  background-color: rgba(255, 244, 214, 1);
+}
+
+footer {
+  position: absolute;
+  background: black;
+  width: 100%;
+  text-align: center;
+  color: white;
+  padding-bottom: 5px;
+}
+footer h2 {
+  font-style: italic;
+}
+#mission_year {
+  color: rgb(255, 89, 89);
+}
