--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 span {
   color: rgb(255, 183, 110);
 }
 .flexible-container {
   display: flex;
+  max-width: 1128px;
   padding: 30px;
   border: 1px solid red;
 }
@@ -15,12 +22,12 @@ span {
 .person1 img {
   width: 480px;
   height: 550px;
-  position: absolute;
-  top: -60px;
+  margin-top: -40px;
 }
 #left_border {
   border-left: 5px solid rgb(255, 89, 89);
-  padding-left: 3px;
+  border-radius: 3px;
+  padding-left: 13px;
   font-size: 28px;
 }
 .intro_text {
@@ -74,4 +81,28 @@ footer h2 {
 }
 #mission_year {
   color: rgb(255, 89, 89);
+}
+
+.container3 {
+  width: 50%;
+  border: 1px solid gray;
+  padding: 50px;
+}
+#documentation {
+  width: 50%;
+}
+#d1 {
+  width: 50%;
+}
+#d1 {
+  width: 50%;
+  height: 300px;
+  width: 300px;
+  margin-top: 40px;
+  position: absolute;
+}
+#d2 {
+  width: 80%;
+  float: right;
+  position: relative;
 }
