--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ span {
 }
 .flexible-container {
   display: flex;
-  max-width: 1128px;
+  max-width: 1200px;
   padding: 30px;
   border: 1px solid red;
 }
@@ -53,7 +53,7 @@ span {
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px gray;
+  box-shadow: 2px 2px 5px rgb(236, 213, 213);
 }
 .container_items img {
   width: 30%;
@@ -85,7 +85,6 @@ footer h2 {
 
 .container3 {
   width: 50%;
-  border: 1px solid gray;
   padding: 50px;
 }
 #documentation {
