--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ span {
 }
 .flexible-container {
   display: flex;
-  max-width: 1200px;
+  max-width: 1100px;
   padding: 30px;
   border: 1px solid red;
 }
@@ -68,6 +68,23 @@ span {
   background-color: rgba(255, 244, 214, 1);
 }
 
+#mission_year {
+  color: rgb(255, 89, 89);
+}
+
+.documentation {
+  width: 50%;
+}
+
+.documentation img {
+  width: 100%;
+  height: 100%;
+}
+.container3 {
+  width: 50%;
+  padding: 50px;
+}
+
 footer {
   position: absolute;
   background: black;
@@ -78,30 +95,4 @@ footer {
 }
 footer h2 {
   font-style: italic;
-}
-#mission_year {
-  color: rgb(255, 89, 89);
-}
-
-.container3 {
-  width: 50%;
-  padding: 50px;
-}
-#documentation {
-  width: 50%;
-}
-#d1 {
-  width: 50%;
-}
-#d1 {
-  width: 50%;
-  height: 300px;
-  width: 300px;
-  margin-top: 40px;
-  position: absolute;
-}
-#d2 {
-  width: 80%;
-  float: right;
-  position: relative;
 }
