--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ main {
 span {
   color: rgb(255, 183, 110);
 }
+
 .flexible-container {
   display: flex;
   max-width: 1100px;
   padding: 30px;
-  border: 1px solid red;
 }
 .person1 {
   width: 50%;
@@ -30,6 +30,10 @@ span {
   padding-left: 13px;
   font-size: 28px;
 }
+.app_border {
+  border-left: 5px dotted rgb(132, 190, 229);
+}
+
 .intro_text {
   padding: 25px;
   width: 50%;
@@ -44,7 +48,7 @@ span {
 .link_btn:hover {
   border: 1px solid rgb(126, 117, 117);
 }
-#sec2_h1 {
+.sec2_h1 {
   font-size: 28px;
   text-align: center;
 }
@@ -95,4 +99,8 @@ footer {
 }
 footer h2 {
   font-style: italic;
+}
+
+#work1 {
+  background-image: repeating-linear-gradient(white, gray);
 }
