--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ span {
   font-size: 28px;
 }
 .app_border {
-  border-left: 5px dotted rgb(132, 190, 229);
+  border-left: 5px solid rgb(132, 198, 229);
 }
 
 .intro_text {
@@ -81,8 +81,8 @@ span {
 }
 
 .documentation img {
-  width: 100%;
-  height: 100%;
+  width: 490px;
+  height: 400px;
 }
 .container3 {
   width: 50%;
@@ -99,8 +99,4 @@ footer {
 }
 footer h2 {
   font-style: italic;
-}
-
-#work1 {
-  background-image: repeating-linear-gradient(white, gray);
 }
