--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ span {
   border-left: 5px solid rgb(255, 89, 89);
   border-radius: 3px;
   padding-left: 13px;
-  font-size: 28px;
+  font-size: 32px;
+  line-height: 40px;
 }
 .app_border {
   border-left: 5px solid rgb(132, 198, 229);
@@ -47,6 +48,8 @@ span {
 }
 .link_btn:hover {
   border: 1px solid rgb(126, 117, 117);
+  opacity: 0.8;
+  transition: 0.3 ease-in-out;
 }
 .sec2_h1 {
   font-size: 28px;
@@ -80,13 +83,30 @@ span {
   width: 50%;
 }
 
-.documentation img {
+.documentation1 img {
   width: 490px;
   height: 400px;
+}
+
+.documentation2 img {
+  width: 490px;
+  height: 490px;
 }
 .container3 {
   width: 50%;
   padding: 50px;
+}
+
+.card-items {
+  width: 33%;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgb(236, 213, 213);
+}
+
+.card-items img {
+  width: 30%;
 }
 
 footer {
